data/derived/fa15/progs/unify/prog0136.ml.out
Characters 88-89:
  if n > 9 then (digitsOfInt (n/10))@[x] else n;;
                                              ^
Error: This expression has type int but an expression was expected of type
         int list
